--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,86 +1,3 @@
+.form-check{display:block;margin-bottom:.125rem;min-height:1.44rem;padding-left:1.5em}.form-check .form-check-input{float:left;margin-left:-1.5em}.form-check-input{-webkit-print-color-adjust:exact;-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:#f8fafc;background-position:50%;background-repeat:no-repeat;background-size:contain;border:1px solid rgba(0,0,0,.25);color-adjust:exact;height:1em;margin-top:.3em;vertical-align:top;width:1em}.form-check-input[type=checkbox]{border-radius:.25em}.form-check-input[type=radio]{border-radius:50%}.form-check-input:active{filter:brightness(90%)}.form-check-input:focus{border-color:#9ac8ee;box-shadow:0 0 0 .25rem rgba(52,144,220,.25);outline:0}.form-check-input:checked{background-color:#3490dc;border-color:#3490dc}.form-check-input:checked[type=checkbox]{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3E%3C/svg%3E")}.form-check-input:checked[type=radio]{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='2' fill='%23fff'/%3E%3C/svg%3E")}.form-check-input[type=checkbox]:indeterminate{background-color:#3490dc;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3E%3C/svg%3E");border-color:#3490dc}.form-check-input:disabled{filter:none;opacity:.5;pointer-events:none}.form-check-input:disabled~.form-check-label,.form-check-input[disabled]~.form-check-label{opacity:.5}.form-control{margin-bottom:10px}.card{border:2px solid #5c26bb;border-radius:10px}.card-body{background-color:#cdcdcd;border-radius:8px;height:100%}
 
-.form-check {
-    display: block;
-    min-height: 1.44rem;
-    padding-left: 1.5em;
-    margin-bottom: 0.125rem;
-}
-.form-check .form-check-input {
-    float: left;
-    margin-left: -1.5em;
-}
-
-.form-check-input {
-    width: 1em;
-    height: 1em;
-    margin-top: 0.3em;
-    vertical-align: top;
-    background-color: #f8fafc;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    border: 1px solid rgba(0, 0, 0, 0.25);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-print-color-adjust: exact;
-    color-adjust: exact;
-}
-.form-check-input[type=checkbox] {
-    border-radius: 0.25em;
-}
-.form-check-input[type=radio] {
-    border-radius: 50%;
-}
-.form-check-input:active {
-    filter: brightness(90%);
-}
-.form-check-input:focus {
-    border-color: #9ac8ee;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(52, 144, 220, 0.25);
-}
-.form-check-input:checked {
-    background-color: #3490dc;
-    border-color: #3490dc;
-}
-.form-check-input:checked[type=checkbox] {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
-}
-.form-check-input:checked[type=radio] {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
-}
-.form-check-input[type=checkbox]:indeterminate {
-    background-color: #3490dc;
-    border-color: #3490dc;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
-}
-.form-check-input:disabled {
-    pointer-events: none;
-    filter: none;
-    opacity: 0.5;
-}
-.form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-    opacity: 0.5;
-}
-
-.form-check-label {
-
-}
-
-.form-control {
-    margin-bottom: 10px;
-}
-
-.card {
-    border: 2px #5c26bb solid;
-    border-radius: 10px;
-}
-
-.card-body {
-    background-color: #cdcdcd;
-    border-radius: 8px;
-    height: 100%;
-}
-
-
+/*# sourceMappingURL=forms.css.map*/
