--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,3 +1,237 @@
-.form-check{display:block;margin-bottom:.125rem;min-height:1.44rem;padding-left:1.5em}.form-check .form-check-input{float:left;margin-left:-1.5em}.form-check-input{-webkit-print-color-adjust:exact;-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:#f8fafc;background-position:50%;background-repeat:no-repeat;background-size:contain;border:1px solid rgba(0,0,0,.25);color-adjust:exact;height:1em;margin-top:.3em;vertical-align:top;width:1em}.form-check-input[type=checkbox]{border-radius:.25em}.form-check-input[type=radio]{border-radius:50%}.form-check-input:active{filter:brightness(90%)}.form-check-input:focus{border-color:#9ac8ee;box-shadow:0 0 0 .25rem rgba(52,144,220,.25);outline:0}.form-check-input:checked{background-color:#3490dc;border-color:#3490dc}.form-check-input:checked[type=checkbox]{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3E%3C/svg%3E")}.form-check-input:checked[type=radio]{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='2' fill='%23fff'/%3E%3C/svg%3E")}.form-check-input[type=checkbox]:indeterminate{background-color:#3490dc;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3E%3C/svg%3E");border-color:#3490dc}.form-check-input:disabled{filter:none;opacity:.5;pointer-events:none}.form-check-input:disabled~.form-check-label,.form-check-input[disabled]~.form-check-label{opacity:.5}.form-control{margin-bottom:10px}.card{border:2px solid #5c26bb;border-radius:10px}.card-body{background-color:#cdcdcd;border-radius:8px;height:100%}
 
-/*# sourceMappingURL=forms.css.map*/
+.form-check {
+    display: block;
+    min-height: 1.44rem;
+    padding-left: 1.5em;
+    margin-bottom: 0.125rem;
+}
+.form-check .form-check-input {
+    float: left;
+    margin-left: -1.5em;
+}
+
+.form-check-input {
+    width: 1em;
+    height: 1em;
+    margin-top: 0.3em;
+    vertical-align: top;
+    background-color: #f8fafc;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: 1px solid rgba(0, 0, 0, 0.25);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+}
+.form-check-input[type=checkbox] {
+    border-radius: 0.25em;
+}
+.form-check-input[type=radio] {
+    border-radius: 50%;
+}
+.form-check-input:active {
+    filter: brightness(90%);
+}
+.form-check-input:focus {
+    border-color: #9ac8ee;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgba(52, 144, 220, 0.25);
+}
+.form-check-input:checked {
+    background-color: #3490dc;
+    border-color: #3490dc;
+}
+.form-check-input:checked[type=checkbox] {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
+}
+.form-check-input:checked[type=radio] {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+}
+.form-check-input[type=checkbox]:indeterminate {
+    background-color: #3490dc;
+    border-color: #3490dc;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
+}
+.form-check-input:disabled {
+    pointer-events: none;
+    filter: none;
+    opacity: 0.5;
+}
+.form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
+    opacity: 0.5;
+}
+
+.form-check-label {
+
+}
+
+.form-control {
+    margin-bottom: 10px;
+}
+
+.card {
+    border: 2px #5c26bb solid;
+    border-radius: 10px;
+}
+
+.card-body {
+    background-color: #cdcdcd;
+    border-radius: 8px;
+    height: 100%;
+}
+
+.toasts {
+    cursor: pointer;
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    max-width: 640px;
+    font-size: 0.8em;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    background: #ffffff;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
+    transition: 0.2s ease-in;
+    z-index: 99999;
+}
+@media (min-width:640px) {
+    .toast {
+        border-radius: 5px;
+        margin-bottom: 0.5em;
+        z-index: 99999;
+    }
+}
+.toast--active {
+    display: flex;
+    -webkit-animation: slidein--bottom 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+            animation: slidein--bottom 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+.toast--warning {
+    background: #bf360c;
+    color: white;
+}
+.toast--success {
+    background: #43a047;
+    color: white;
+}
+.toast__actions {
+    width: 100%;
+    max-width: 768px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+}
+@media (min-width:640px) {
+    .toast__actions {
+        flex-flow: row;
+    }
+}
+.toast__trigger {
+    cursor: pointer;
+    box-sizing: border-box;
+    flex: 1;
+    padding: 1em;
+    margin: 1em;
+    border: 0;
+    background: tomato;
+    border-radius: 5px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: 0.2s ease;
+}
+.toast__trigger:hover {
+    background: #ff3814;
+}
+.toast__container {
+    box-sizing: border-box;
+    padding: 0em 1em;
+    position: fixed;
+    width: 100%;
+    max-width: 640px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    top: 50px;
+    left: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    z-index: 99999;
+}
+@media (min-width:640px) {
+    .toast__container {
+        padding: 0 1em;
+    }
+}
+@media (min-width:1024px) {
+    .toast__container {
+        left: 0;
+    }
+}
+.toast__icon {
+    height: 60px;
+    width: 60px;
+    box-sizing: border-box;
+    padding: 1em;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.toast__icon svg {
+    height: 100%;
+}
+@media (min-width:640px) {
+    .toast__icon {
+        display: flex;
+    }
+}
+.toast__icon ~ .toast__content {
+    padding: 1em;
+}
+@media (min-width:640px) {
+    .toast__icon ~ .toast__content {
+        padding: 1em 1em 1em 0;
+    }
+}
+.toast__content {
+    box-sizing: border-box;
+    padding: 1em;
+}
+.toast__content h2 {
+    margin: 0 0 0.25em 0;
+    padding: 0;
+    font-size: 1.2em;
+}
+.toast__content p {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+}
+
+@-webkit-keyframes slidein--bottom {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(100%);
+    }
+}
+
+@keyframes slidein--bottom {
+    0% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(100%);
+    }
+}
+
+
